packages/traxitt-system/k8s/client.yaml
apiVersion: v1
kind: Pod
metadata:
  name: system-client
  namespace: c6o-system
spec:
  containers:
  - name: system-client
    image: c6o/system-client:canary
    imagePullPolicy: Always
