packages/traxitt-system/k8s/marina.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: traxitt-system
  name: system-marina
  labels:
    role: system
    app: marina
spec:
  selector:
    matchLabels:
      role: system
      app: marina
  replicas: 1
  template:
    metadata:
      labels:
        role: system
        app: marina
    spec:
      containers:
      - name: system-marina
        image: traxitt/system-marina:canary
        imagePullPolicy: Always
        ports:
          - containerPort: 80
        volumeMounts:
          - name: "jsconfig"
            mountPath: "/usr/share/nginx/html/config.js"
            subPath: "system-marina-js-config-file"
      volumes:
      - name: "jsconfig"
        configMap:
          name: "system-marina-js-configmap"
---
apiVersion: v1
kind: Service
metadata:
    namespace: traxitt-system
    name: system-marina
    labels:
      role: system
      app: marina
spec:
    ports:
    - port: 80
      name: http
    type: NodePort
    selector:
      role: system
      app: marina
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: system-marina
  namespace: traxitt-system
  labels:
    role: system
    app: marina
spec:
  hosts:
  - '*'
  gateways:
  - traxitt-system
  http:
    - match:
      - uri:
          prefix: /
      rewrite:
        uri: /
      route:
      - destination:
          port:
            number: 80
          host: system-marina
